self-study/k8s/liveAndRead.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-lp-rp
  labels:
    app: sample
spec:
  containers:
  - name: app
    image: ghcr.io/subicura/echo:v1
    livenessProbe:
      httpGet:
        path: /not/exist
        port: 8080
    readinessProbe:
      httpGet:
        path: /
        port: 3000
