self-study/k8s/multi-containers.yml
apiVersion: v1
kind: Pod
metadata:
  name: counter
  labels:
    app: counter
spec:
  containers:
  - name: app
    image: ghcr.io/subicura/counter:latest
  - name: db
    image: redis
