self-study/k8s/readinessProbe.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-rp
  labels:
    app: sample
spec:
  containers:
  - name: app
    image: ghcr.io/subicura/echo:v1
    readinessProbe:
      httpGet:
        path: /not/exist
        port: 8080
      initialDelaySeconds: 5
      timeoutSeconds: 2
      periodSeconds: 5
      failureThreshold: 1
