self-study/k8s/ingress_v1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-v1
spec:
  rules:
  - host: v1.ing.192.168.65.4.sslip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: ing-v1
          servicePort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo
      tier: app
      version: v1
  template:
    metadata:
      labels:
        app: echo
        tier: app
        version: v1
    spec:
      containers:
      - name: echo
        image: ghcr.io/subicura/echo:v1
        livenessProbe:
          httpGet:
            path: /
            port: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: echo-v1
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: echo
    tier: app
    version: v1
